[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mongoz"
description = "ODM with pydantic made it simple"
long_description = "ODM with pydantic made it simple"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ['version']
license = "MIT"
authors = [{ name = "Tiago Silva", email = "tiago.arasivla@gmail.com" }]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "motor>=3.3.1",
    "dymmond-settings>=1.0.4",
    "orjson>=3.9.5",
    "pydantic>=2.5.3,<3.0.0",
]
keywords = ["mongoz", "odm", "nosql", "mongodb"]

[project.urls]
Homepage = "https://github.com/tarsil/mongoz"
Documentation = "https://mongoz.tarsild.io"
Changelog = "https://mongoz.tarsild.io/release-notes/"
Funding = "https://github.com/sponsors/tarsil"
Source = "https://github.com/tarsil/mongoz"

[project.optional-dependencies]
test = [
    "a2wsgi>1.10.0,<2.0.0",
    "autoflake>=2.0.2,<3.0.0",
    "black==24.1.1,<25.0",
    "esmerald>=3.0.0",
    "httpx>=0.25.0,<0.30.0",
    "isort>=5.12.0,<6.0.0",
    "mypy==1.9.0",
    "pytest>=7.2.2,<9.0.0",
    "pytest-asyncio>=0.21.1,<1.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "requests>=2.28.2",
    "ruff>=0.0.256,<1.0.0",
]

dev = [
    "anyio>=4.0.0,<5",
    "ipdb>=0.13.13,<1.0.0",
    "pdbpp",
    "pre-commit>=3.3.1,<4.0.0",
]

doc = [
    "mkautodoc>=0.2.0,<0.3.0",
    "mkdocs>=1.4.2,<2.0.0",
    "mkdocs-material==9.1.5",
    "mdx-include>=1.4.1,<2.0.0",
    "mkdocs-markdownextradata-plugin>=0.1.7,<0.3.0",
    "mkdocstrings>=0.19.0,<0.21.0",
    "pyyaml>=5.3.1,<7.0.0",
]

[tool.hatch.version]
path = "mongoz/__init__.py"

[tool.isort]
profile = "black"
known_third_party = []
src_paths = ["mongoz"]

[tool.mypy]
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
strict = true
disallow_untyped_decorators = true
disallow_any_generics = false
implicit_reexport = false
no_implicit_optional = false
show_error_codes = true
disallow_incomplete_defs = true
disable_error_code = "attr-defined,arg-type,override,misc,valid-type,call-overload,no-any-return"
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff.lint]
select = ["E", "W", "F", "C", "B", "I"]
ignore = ["E501", "B008", "C901", "B026"]

exclude = ["docs_src/"]

[tool.coverage.run]
parallel = true
context = '${CONTEXT}'
source = ["tests", "mongoz"]
# omit = []

[[tool.mypy.overrides]]
module = "mongoz.tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs_src.*"
ignore_errors = true


[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
junit_family = "xunit2"

[tool.hatch.build.targets.sdist]
include = ["/mongoz"]
