[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mongoz"
description = "ODM with pydantic made it simple"
long_description = "ODM with pydantic made it simple"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ['version']
license = "MIT"
authors = [{ name = "Tiago Silva", email = "tiago.arasivla@gmail.com" }]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "motor>=3.3.1",
    "dymmond-settings>=1.0.4",
    "orjson>=3.9.5",
    "pydantic>=2.5.3,<3.0.0",
]
keywords = ["mongoz", "odm", "nosql", "mongodb"]

[project.urls]
Homepage = "https://github.com/dymmond/mongoz"
Documentation = "https://mongoz.dymmond.com"
Changelog = "https://mongoz.dymmond.com/release-notes/"
Funding = "https://github.com/sponsors/tarsil"
Source = "https://github.com/dymmond/mongoz"


[tool.hatch.version]
path = "mongoz/__init__.py"

[tool.hatch.envs.default]
dependencies = [
    "anyio>=4.0.0,<5",
    "mypy==1.9.0",
    "ruff>=0.3.0,<5.0.0",
    "pre-commit>=3.3.1,<4.0.0",
    "devtools>=0.12.2",
    "ipython",
    "ptpython",
    "twine",
]

[project.optional-dependencies]
testing = [
    "a2wsgi>1.10.0,<2.0.0",
    "autoflake>=2.0.2,<3.0.0",
    "black==24.1.1,<25.0",
    "esmerald>=3.1.3",
    "httpx>=0.25.0,<0.30.0",
    "isort>=5.12.0,<6.0.0",
    "mypy==1.9.0",
    "pytest>=7.2.2,<9.0.0",
    "pytest-asyncio>=0.21.1,<1.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "requests>=2.28.2",
    "ruff>=0.0.256,<1.0.0",
    "ipdb",
    "pdbpp",
]

docs = [
    "griffe-typingdoc>=0.2.2,<1.0",
    "mkautodoc>=0.2.0,<0.3.0",
    "mkdocs>=1.1.2,<2.0.0",
    "mkdocs-material>=9.4.4,<10.0.0",
    "mdx-include>=1.4.2,<2.0.0",
    "mkdocs-macros-plugin>=0.4.0",
    "mkdocs-meta-descriptions-plugin>=2.3.0",
    "mkdocstrings[python]>=0.23.0,<0.30.0",
    "pyyaml>=6.0,<7.0.0",
]

[tool.hatch.envs.default.scripts]
clean_pyc = "find . -type f -name \"*.pyc\" -delete"
clean_pyi = "find . -type f -name \"*.pyi\" -delete"
clean_pycache = "find . -type d -name \"*__pycache__*\" -delete"
build_with_check = "hatch build; twine check dist/*"
lint = "ruff check --fix --line-length 99  mongoz tests {args}; hatch run test:check_types;"

[tool.hatch.envs.docs]
features = ["testing", "docs"]

[tool.hatch.envs.docs.scripts]
update_languages = "scripts/docs.py update-languages"
build = "hatch run docs:update_languages; scripts/docs.py build-all"
build_lang = "hatch run docs:update_languages; scripts/docs.py build --lang {args}"
serve = "hatch run docs:update_languages; scripts/docs.py live"
dev = "hatch run docs:update_languages; scripts/docs.py serve"
serve_lang = "hatch run docs:update_languages; scripts/docs.py live --lang {args}"
new_lang = "hatch run docs:update_languages; scripts/docs.py new-lang --lang {args}"

[tool.hatch.envs.test]
dependencies = [
    "a2wsgi>1.10.0,<2.0.0",
    "autoflake>=2.0.2,<3.0.0",
    "black==24.1.1,<25.0",
    "esmerald>=3.1.3",
    "httpx>=0.25.0,<0.30.0",
    "isort>=5.12.0,<6.0.0",
    "mypy==1.9.0",
    "pytest>=7.2.2,<9.0.0",
    "pytest-asyncio>=0.21.1,<1.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "requests>=2.28.2",
    "ruff>=0.0.256,<1.0.0",
]

[tool.hatch.envs.test.scripts]
# needs docker services running
test = "pytest {args}"
test_man = "pytest {args} --disable-pytest-warnings -s -vv"
coverage = "pytest --cov=asyncz --cov=tests --cov-report=term-missing:skip-covered --cov-report=html tests {args}"
check_types = "mypy -p mongoz"


[tool.isort]
profile = "black"
known_third_party = []
src_paths = ["mongoz"]

[tool.mypy]
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
strict = true
disallow_untyped_decorators = true
disallow_any_generics = false
implicit_reexport = false
no_implicit_optional = false
show_error_codes = true
disallow_incomplete_defs = true
disable_error_code = "attr-defined,arg-type,override,misc,valid-type,call-overload,no-any-return"
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff.lint]
select = ["E", "W", "F", "C", "B", "I"]
ignore = ["E501", "B008", "C901", "B026"]

exclude = ["docs_src/"]

[tool.coverage.run]
parallel = true
context = '${CONTEXT}'
source = ["tests", "mongoz"]
# omit = []

[[tool.mypy.overrides]]
module = "mongoz.tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs_src.*"
ignore_errors = true


[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
junit_family = "xunit2"

[tool.hatch.build.targets.sdist]
include = ["/mongoz"]
